--- a/schedule/index.html
+++ b/schedule/index.html
@@ -35,7 +35,7 @@
   <thead>
     <tr>
       <th>#</th>
-      <th style="width:15%;">Starts</th>
+      <th style="width:15%;">Date</th>
       <th>Topics(s)</th>
       <th>Lectures</th>
       <th style="width:30%;">Read / Watch / Do</th>
@@ -55,32 +55,153 @@
       <td>01</td>
       <td>2/1/2021</td>
       <td>Course introduction, concepts</td>
-      <td><a href="https://l.uvarc.io/youtube-lectures" target="_new">Watch</a></td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Facebook Rack Design</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">AWS Overview</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">GCP Overview</a>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
       </td>
     </tr>
     <tr>
-      <td></td>
-      <td>9/20</td>
-      <td><strong>Programming Assignment #1 Due</strong></td>
-      <td></td>
+      <td>02</td>
+      <td>2/8/2021</td>
+      <td>Data: Formats and Files</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <a style="font-weight:bold;" href="https://l.uvarc.io/pa1"><img src="../images/writing.png" /> PA #1</a>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
       </td>
     </tr>
     <tr>
-      <td></td>
-      <td>10/9</td>
-      <td><strong>Mid-Term Exam Due @ 11:59pm EDT</strong></td>
-      <td></td>
+      <td>03</td>
+      <td>2/15/2021</td>
+      <td>Data: Fetching and Ingesting</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/writing.png" /> <a href="https://l.uvarc.io/mid-term-review" style="font-weight:bold;">Review Sheet</a> <br />
-        <img src="../images/writing.png" /> <a href="https://collab.its.virginia.edu/portal/site/4721482a-fa9b-45af-a68c-ee47e0e0e89d/tool/13876921-69e0-47f9-b5d6-63449e7fceca/jsf/index/mainIndex" target="_new" style="font-weight:bold;">Exam</a>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
       </td>
     </tr>
+    <tr>
+      <td>04</td>
+      <td>2/22/2021</td>
+      <td>Advanced Scripting</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+      </td>
+    </tr>
+    <tr>
+      <td>05</td>
+      <td>3/1/2021</td>
+      <td>Containers: Portable Applications</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+      </td>
+    </tr>
+    <tr>
+      <td>06</td>
+      <td>3/8/2021</td>
+      <td><b>NO LECTURE</b><br />Containers: Portable Applications 2</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+      </td>
+    </tr>
+    <tr>
+      <td>07</td>
+      <td>3/15/2021</td>
+      <td>SQL & Relational Database Services</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+      </td>
+    </tr>
+    <tr>
+      <td>08</td>
+      <td>3/22/2021</td>
+      <td>SQL & Relational Database Services</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+      </td>
+    </tr>
+    <tr>
+      <td>09</td>
+      <td>3/29/2021</td>
+      <td>NoSQL & Unstructured Data Services</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+      </td>
+    </tr>
+    <tr>
+      <td>10</td>
+      <td>4/5/2021</td>
+      <td>NoSQL & Unstructured Data Services</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+      </td>
+    </tr>
+    <tr>
+      <td>11</td>
+      <td>4/12/2021</td>
+      <td>Course introduction, concepts<br /><b>NO DISCUSSION</b></td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+      </td>
+    </tr>
+    <tr>
+      <td>12</td>
+      <td>4/19/2021</td>
+      <td>Course introduction, concepts</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+      </td>
+    </tr>
+    <tr>
+      <td>13</td>
+      <td>4/26/2021</td>
+      <td>Course introduction, concepts</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+      </td>
+    </tr>
+    <tr>
+      <td>14</td>
+      <td>5/3/2021</td>
+      <td>Wrapping Up</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td> </td>
+    </tr>
+
   </tbody>
 </table>
 
