--- a/aws/index.html
+++ b/aws/index.html
@@ -33,7 +33,7 @@
 
 <p>AWS Educate is Amazon's global initiative to provide students comprehensive resources for building skills in the cloud. It is a no-cost curriculum providing access to content, training, pathways, AWS services, and the AWS Educate Job Board with employment opportunities.</p>
 
-<p>Students will be using their own AWS account for hands-on work in this course. It is very likely that you do not yet have an AWS account, so please follow the instructions below:</p>
+<p>Students will be using their own AWS account for hands-on work in this course. It is very likely that you do not yet have an AWS account, so please complete these two steps:</p>
 
 <p><img src="../images/number-1.png" align="left" alt="1" style="height:60px;width:60px;margin-right:1rem;" /><strong>Create an AWS 
 Account and use the Free Tier</strong> by <strong><a href="https://aws.amazon.com/free/?all-free-tier.sort-by=item.additionalFields.SortRank&all-free-tier.sort-order=asc" target="_new">signing up here</a></strong>. 
@@ -45,7 +45,7 @@ larger AWS Promotional Credit amount. <strong><a href="https://aws.amazon.com/fr
 <p><img src="../images/number-2.png" align="left" alt="1" style="height:60px;width:60px;margin-right:1rem;" />
 <strong>Request AWS Education Credits</strong>. After you have created your own AWS account, go to AWS Educate and <strong><a href="https://www.awseducate.com/registration?educate-reg-variantB" target="_new">register as a student</a></strong> requesting student credits for your own standalone AWS account (instead of creating a Starter Account). Within 24 hours you will be able to retrieve a coupon code for $100 that can be credited to your account.</p>
 
-<p>If you already have an AWS account, simply sign up for AWS Educate as a student and request your $100 credits. They will issue you a coupon code that you can apply to your existing account.</p>
+<p>If you already have an AWS account, simply sign up for AWS Educate as a student and request your $100 credit. They will issue you a coupon code that you can apply to your existing account.</p>
 
 <br clear=all />
 
