Fleshing out the schedule

--- a/aws/index.html
+++ b/aws/index.html
@@ -47,6 +47,8 @@ larger AWS Promotional Credit amount. <strong><a href="https://aws.amazon.com/fr
 
 <p>If you already have an AWS account, simply sign up for AWS Educate as a student and request your $100 credit. They will issue you a coupon code that you can apply to your existing account.</p>
 
+<p>If you have an AWS "Starter" account, please contact the instructor.</p>
+
 <br clear=all />
 
 <h3>Learn More about AWS Educate</h3>
