--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <p>Neal Magee, Ph.D. <a href="mailto:nem2p@virginia.edu"><img src="images/email.png" alt="email" /></a><br />Solution Architect, Research Computing<br />University of Virginia, Spring 2021</p>
         <div style="min-height:2rem;"></div>
         <ul>
-          <li><a href="https://nmagee.github.io/ds3002/">Review the<strong>Schedule</strong></a></li>
-          <li><a href="" target="_new">View lectures<strong>YouTube</strong></a></li>
+          <li><a href="https://nmagee.github.io/ds3002/schedule/">Review the<strong>Schedule</strong></a></li>
+          <li><a href="https://l.uvarc.io/ds3002-lectures" target="_new">View lectures<strong>YouTube</strong></a></li>
           <li><a href="https://l.uvarc.io/ds3002-discord" target="_new">Discussions on <strong>Discord</strong></a></li>
         </ul>
       </header>
@@ -52,7 +52,7 @@
   Class discussion, more specifics of the content, and Q&A will be held in <strong>REAL-TIME each Thursday from 11:00am-12:00pm EDT</strong>. Students will be expected to attend these discussions having viewed the lectures and completed all reading and external video assignments beforehand.</p>
   <p>No formal Office hours will be held weekly. Instead, drop your question in the <b>#office-hours</b> channel in Discord or DM a TA or Instructor to set up a time to chat.</p>
 
-  <p><a href="" style="font-decoration:none;color:black;"><button style="padding:0.4rem 0.8rem 0.4rem 0.8rem;background-color:white;border:solid 1px #ccc;">View the Schedule</button></a></p>
+  <p><a href="schedule/" style="font-decoration:none;color:black;"><button style="padding:0.4rem 0.8rem 0.4rem 0.8rem;background-color:white;border:solid 1px #ccc;">View the Schedule</button></a></p>
 </div>
 
 <h2><a id="audience" class="anchor" href="#audience" name="audience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Audience</h2>
@@ -97,7 +97,7 @@
     <tr>
       <td>Programming Assignments</td>
       <td></td>
-      <td>2 separate projects</td>
+      <td>2 projects</td>
     </tr>
   </tbody>
 </table>
