--- a/schedule/index.html
+++ b/schedule/index.html
@@ -23,8 +23,8 @@
 
         <ul>
           <li><a href="https://nmagee.github.io/ds3002/">Return to the<strong>Syllabus</strong></a></li>
-          <li><a href="" target="_new">View lectures<strong>YouTube</strong></a></li>
-          <li><a href="">Discussions on <strong>Discord</strong></a></li>
+          <li><a href="https://l.uvarc.io/ds3002-lectures" target="_new">View lectures<strong>YouTube</strong></a></li>
+          <li><a href="https://l.uvarc.io/ds3002-discord">Discussions on <strong>Discord</strong></a></li>
         </ul>
       </header>
       <section>
@@ -147,7 +147,7 @@
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/lab.png" /> <a href="https://university.mongodb.com/courses/M100/about" target="_new">MongoDB</a>
       </td>
     </tr>
     <tr>
