Extending the schedule

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   <li><strong><a href="">YouTube</a></strong> - This will be our primary platform for recorded lectures and the video portion for some real-time discussions.</li>
   <li><strong><a href="https://l.uvarc.io/ds3002-discord" target="_new">Discord</a></strong> - Discord will serve as our hub for discussions, Q&A, and distributing extra material specific to topics or assignments. Download the software, create a Discord account, and <strong><a href="">join the class server</a></strong>.</li>
   <li><strong><a href="https://github.com/" target="_new">Git/GitHub</a></strong> - Students are expected to know how to version control their material using Git. Some programming assignments will require submission via commits pushed to GitHub. Need a <a href="https://katacoda.com/courses/git" target="_new">tutorial</a>? If you do not have a GitHub account, create one now. Also, sign up for the <b><a href="https://education.github.com/students" target="_new">GitHub Education Student Developer Pack</a></b></li>
-  <li><strong><a href="https://nmagee.github.io/ds3002/aws/">Amazon Web Services</a></strong> - All students will use AWS accounts and credits for this course. Please click the link to learn more about the AWS Educate program and your options for creating an account. We will also be using the <strong>AWS <a href="https://aws.amazon.com/cli/">CLI</a> and <a href="https://aws.amazon.com/tools/">SDKs</a></strong> to interact with the AWS cloud programmatically. This will include the CLI interface and at least one SDK, preferably the <code>boto3</code> library for Python.</li>
+  <li><strong><a href="https://nmagee.github.io/ds3002/aws/">Amazon Web Services</a></strong> - All students will use AWS accounts and credits for this course. Please click the link to learn more about the AWS Educate program and your options for creating an account.  </li>
   <li><strong><a href="">Google Cloud Platform</a></strong> - Students will also work with GCP to broaden their hands-on experience. Google has donated $50 credit to each student for work in their environment.
   <li><strong><a href="https://www.qwiklabs.com/" target="_new">Qwiklabs</a></strong> - Provides hands-on labs in AWS & GCP cloud services. Many of these are free and include detailed steps to complete practice projects of varying complexity.
   <li><strong><a href="">Terms</a></strong> - An etherpad list of terms and concepts touched on. This page will change over the course of the semester and be a good resource for exam review. Students can edit this page!</li>
@@ -213,7 +213,7 @@
   <input type="checkbox" id="aws_edu" name="aws_edu" value="y"> Join AWS Educate / request credits <br />
   <input type="checkbox" id="gcp_acc" name="gcp_acc" value="y"> Create a GCP account <br />
   <input type="checkbox" id="git_acc" name="git_acc" value="y"> Create a free GitHub account <br />
-  <input type="checkbox" id="doc_sfw" name="doc_sfw" value="y"> Install <code>git</code> locally <br />
+  <input type="checkbox" id="git_sfw" name="git_sfw" value="y"> Install <code>git</code> locally <br />
   <input type="checkbox" id="dis_acc" name="dis_acc" value="y"> Create a free Discord account / join server <br />
   <input type="checkbox" id="qwi_acc" name="qwi_acc" value="y"> Create a free Qwiklabs account / requets credits <br />
 </p>
