--- a/schedule/index.html
+++ b/schedule/index.html
@@ -54,12 +54,11 @@
     <tr>
       <td>01</td>
       <td>2/1/2021</td>
-      <td>Course introduction, concepts</td>
+      <td>Course introduction: It's All About Data</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a>
       </td>
     </tr>
     <tr>
@@ -76,7 +75,7 @@
     <tr>
       <td>03</td>
       <td>2/15/2021</td>
-      <td>Data: Fetching and Ingesting</td>
+      <td>Data: Scripting and Pipelines</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -87,7 +86,7 @@
     <tr>
       <td>04</td>
       <td>2/22/2021</td>
-      <td>Advanced Scripting</td>
+      <td>Consuming APIs</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -98,7 +97,7 @@
     <tr>
       <td>05</td>
       <td>3/1/2021</td>
-      <td>Containers: Portable Applications</td>
+      <td>Creating APIs</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -109,7 +108,7 @@
     <tr>
       <td>06</td>
       <td>3/8/2021</td>
-      <td><b>NO LECTURE</b><br />Containers: Portable Applications 2</td>
+      <td><b>NO LECTURE</b><br />Containers: Portable Applications</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -120,7 +119,7 @@
     <tr>
       <td>07</td>
       <td>3/15/2021</td>
-      <td>SQL & Relational Database Services</td>
+      <td>Containers: Portable Applications</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -142,10 +141,10 @@
     <tr>
       <td>09</td>
       <td>3/29/2021</td>
-      <td>NoSQL & Unstructured Data Services</td>
+      <td>SQL & Relational Database Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler</a> <br />
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
         <img src="../images/lab.png" /> <a href="https://university.mongodb.com/courses/M100/about" target="_new">MongoDB</a>
       </td>
@@ -156,7 +155,7 @@
       <td>NoSQL & Unstructured Data Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
         <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
       </td>
@@ -164,7 +163,7 @@
     <tr>
       <td>11</td>
       <td>4/12/2021</td>
-      <td>Course introduction, concepts<br /><b>NO DISCUSSION</b></td>
+      <td>NoSQL & Unstructured Data Services<br /><b>NO DISCUSSION</b></td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -175,7 +174,7 @@
     <tr>
       <td>12</td>
       <td>4/19/2021</td>
-      <td>Course introduction, concepts</td>
+      <td>Cloud Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -186,7 +185,7 @@
     <tr>
       <td>13</td>
       <td>4/26/2021</td>
-      <td>Course introduction, concepts</td>
+      <td>Cloud Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
