--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <td>Every THURSDAY 11:00am-12:00pm EDT</td>
     </tr>
     <tr>
-      <td>Programming Assignments</td>
+      <td>Data Projects</td>
       <td></td>
       <td>2 projects</td>
     </tr>
@@ -104,10 +104,10 @@
 
 <ul>
   <li><b>Student Survey</b> - a simple questionnaire for me to ascertain baseline skills for the class and students' familiarity with a variety of tools and concepts.
-  <li><b>Lectures / Reading / Viewing</b> - Posted beforehand. Though not a graded portion of the course, lectures, readings and supporting videos have been carefully selected to introduce and explain important concepts to you. Should you not digest these you will likely not perform well in the course. Lectures and all links will remain posted for the entire semester.
-  <li><b>Labs</b> - Posted beforehand. Labs are an important way for you to interact with an actual public cloud provider. In most cases this will be Amazon Web Services. Labs will either be hosted in Qwiklabs (and incur no charges in your own AWS account) or are designed to cost very little if performed in your account (a couple of dollars at most).
-  <li><b>Discussions</b> - Class discussions are the only synchronous element of this course, and will be held weekly on Thursdays at 11am Eastern Time. Please join the discord channel and bring your questions! Discussion may be accompanied by live Zoom.
-  <li><b>Programming Assignments</b> - Programming assignments are graded mini-projects that implement your understanding of course material. PAs will be posted one week before due. There is no time limit on PAs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
+  <li><b>Lectures / Reading / Viewing</b> - Will be posted beforehand. Though not a graded portion of the course, lectures, readings and supporting videos have been carefully selected to introduce and explain important concepts to you. Should you not digest these you will likely not perform well in the course. Lectures and all links will remain posted for the entire semester.
+  <li><b>Labs</b> - are an important way for you to interact with an actual public cloud provider. In most cases this will be Amazon Web Services. Labs will either be hosted in Qwiklabs (and incur no charges in your own AWS account) or are designed to cost very little if performed in your account (a couple of dollars at most).
+  <li><b>Discussions</b> - are the only synchronous element of this course, and will be held weekly on Thursdays at 11am Eastern Time. Please join the discord channel and bring your questions! Discussion may be accompanied by live Zoom.
+  <li><b>Data Projects</b> - are graded assignments that implement your understanding of course material. PAs will be posted one week before due. There is no time limit on PAs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
 </ul>
 
 <h3>Grading Scale</h3>
