Student survey link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </thead>
   <tbody>
     <tr>
-      <td><a href="" target="_new">Student Survey</a></td>
+      <td><a href="https://l.uvarc.io/ds3002-survey" target="_new">Student Survey</a></td>
       <td></td>
       <td>First week of class</td>
     </tr>
