--- a/schedule/index.html
+++ b/schedule/index.html
@@ -48,7 +48,7 @@
       <td>Student Survey</td>
       <td></td>
       <td>
-        <a href="" target="_new"><img src="../images/writing.png" /> <b>Take the Survey</b></a>
+        <a href="https://l.uvarc.io/ds3002-survey" target="_new"><img src="../images/writing.png" /> <b>Take the Survey</b></a>
       </td>
     </tr>
     <tr>
